2013-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2io.cc: Centralize addBreakpoint(), deleteBreakpoint(),
	and layoutBreakpoints() as they are common between the JTAGICE mkII
	and JTAGICE3.
	* src/jtag2.h: (Dito.)
	* src/jtag3.h: (Dito.)
	* src/jtag.h: (Dito.)
	* src/jtag2bp.cc: (Dito.)
	* src/jtag3io.cc: (Dito.)
	* src/jtaggeneric.cc: (Dito.)
	* src/jtag3bp.cc: (Dito.)

2013-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtag.h: Remove codeBreakpointBetween() and stopAt() methods
	* jtag1.h: (Dito.)
	* jtag2.h: (Dito.)
	* jtag3.h: (Dito.)
	* jtagbp.cc: (Dito.)
	* jtagio.cc: (Dito.)
	* jtag2bp.cc: (Dito.)
	* jtag2io.cc: (Dito.)
	* jtag3bp.cc: (Dito.)
	* jtag3io.cc: (Dito.)

2013-01-04  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac (AC_INIT): Bump version.

2013-01-04  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Bring in the initial JTAGICE3 support.  Not quite everything is
	working, but it's good enough for a start.
	* src/jtag.h: Add parameter structure for ICE3.
	* src/jtag2.h: Move enum debugproto and class jtag_io_exception
	out into jtag.h as the ICE3 also uses them.
	* src/main.cc: Add the -3/--jtag3 option, and handle jtag3 object
	instanciation
	* src/devdescr.cc: Add osccal and ocdrev fields to each record.
	* src/jtaggeneric.cc: extend default contructor.
	* src/Makefile.am: Add new files to infrastructure.
	* configure.ac: Swap check for pthread and C++ compiler, so the
	CXXFLAGS get set correctly (-g -O2).
	* src/jtag3prog.cc: New file.
	* src/jtag3.h: (Dito.)
	* src/jtag3misc.cc: (Dito.)
	* src/jtag3run.cc: (Dito.)
	* src/jtag3io.cc: (Dito.)
	* src/jtag2usb.cc: (Dito.)
	* src/jtag3rw.cc: (Dito.)
	* src/jtag3bp.cc: (Dito.)
	* tools/pdml.xsl: Add timestamp to output.

2013-01-01  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtagrw.cc (jtag1::jtagRead): throw a jtag_exception
	rather than returning a NULL pointer if the ICE's response
	is not JTAG_R_OK.

2012-12-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
